Implemented turn key pieces

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ LibFiles/__pycache__/*
 TrainingData/StockDump/*
 EstimateTrainingData/*
 libfiles/temp/lastBatch.txt
-libfiles/temp/lastBatch.txt
+savemodels/*
 datafiles/*
 *__pycache__
 .vscode
