Implemented full turn key implementation with extrapolation of stock closing price

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ LibFiles/__pycache__/*
 TrainingData/StockDump/*
 EstimateTrainingData/*
 libfiles/temp/lastBatch.txt
-savemodels/*
+savedmodels/*
+predictionDump/*
 datafiles/*
 *__pycache__
 .vscode
