--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-LibFiles/temp/*
-LibFiles/__pycache__/*
-TrainingData/StockDump/*
-EstimateTrainingData/*
-libfiles/temp/lastBatch.txt
-savedmodels/*
-logs/*
-predictionDump/*
+*/LibFiles/temp/*
+*/LibFiles/__pycache__/*
+*/TrainingData/StockDump/*
+*/EstimateTrainingData/*
+*/libfiles/temp/lastBatch.txt
+*/savedmodels/*
+*/logs/*
+*/predictionDump/*
 datafiles/*
 *__pycache__
 .vscode
